2020-01-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* NEWS:
	  === Version 0.3.1 ===

2020-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	SansMono: Set FSType to installable embedding.

	* arundina/ArundinaSansMono*.sfd:
	  - Set FSType to "Installable".
	  - Bump font version to 2.02.

2020-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Sans: Set FSType to installable embedding.

	* arundina/ArundinaSans[-*].sfd:
	  - Set FSType to "Installable".
	  - Bump font version to 2.03.

2020-01-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix CTAN zipball build failure.

	We don't need to copy distdir to CTAN any more, as the source
	and CTAN are now shipped under the same name.
	And in fact, we can't. Clearing the old CTAN distdir before
	copying would just destroy the original distdir!

	* configure.ac:
	  - Drop LATEX_PACKAGE variable.
	* Makefile.am:
	  - Replace $(LATEX_PACKAGE) with $(PACKAGE).
	  - Drop 'ctandistdir' variable.
	  - Drop all $(ctandistdir) clean-ups and copyings.
	  - Replace the remaining $(ctandistdir) in tar/zip creations
	    with $(distdir).

2020-01-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* NEWS:
	  === Version 0.3.0 ===

2020-01-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix LaTeX build failure.

	* configure.ac:
	  - LaTeX build needs Python for Type1 stuffs generation.
	    Move specific checks for LaTeX earlier and turn on
	    NEED_PYTHON flag.

2020-01-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename fontconfig file.

	* fontconfig/Makefile.am,
	  fontconfig/65-sipa-arundina.conf -> 65-arundina.conf:
	  - Remove 'sipa' part from fontconfig file name, according to
	    the new source name.

2020-01-17  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add automated font binary tarballs building

	* Makefile.am:
	  - Add 'dist-fonts' target and friends for automatically
	    building OTF and TTF tarballs.