@@ -1,9 +1,9 @@
-ltxtype1dir = $(texmfdir)/fonts/type1/public/$(LATEX_PACKAGE)
-ltxafmdir = $(texmfdir)/fonts/afm/public/$(LATEX_PACKAGE)
-ltxtfmdir = $(texmfdir)/fonts/tfm/public/$(LATEX_PACKAGE)
-ltxvfdir  = $(texmfdir)/fonts/vf/public/$(LATEX_PACKAGE)
+ltxtype1dir = $(texmfdir)/fonts/type1/public/$(PACKAGE)
+ltxafmdir = $(texmfdir)/fonts/afm/public/$(PACKAGE)
+ltxtfmdir = $(texmfdir)/fonts/tfm/public/$(PACKAGE)
+ltxvfdir  = $(texmfdir)/fonts/vf/public/$(PACKAGE)
 
-ltxmapdir = $(texmfdir)/fonts/map/dvips/$(LATEX_PACKAGE)
+ltxmapdir = $(texmfdir)/fonts/map/dvips/$(PACKAGE)
 
 ltxmap_DATA = $(MAP)
 
